# stellar-connect-wallet

./: .gitignore  .vercelignore  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  main.yml
contracts/crowdfund/: Cargo.toml  crowdfund.wasm
contracts/crowdfund/src/: lib.rs  test.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
public/: index.html
screenshots/: desktop.ini
src/: App.css  App.js  App.test.js  CampaignProgressBar.css  CampaignProgressBar.js  ConfettiBlast.js  CopyButton.css  CopyButton.js  ThemeToggle.css  ThemeToggle.js  TransactionHistory.css  TransactionHistory.js  index.css  index.js  polyfills.js
src/components/: ContractTestSuite.css  ContractTestSuite.js  Crowdfund.css  Crowdfund.js  Crowdfund.test.js  Freighter.js  Header.css  Header.js  Payment.css  Payment.js  Payment.test.js
src/services/: debug_contract.js  stellarService.js
